<resources>
    <string name="app_name" translatable="false">MusicApp</string>
    <string name="lang">en</string>
    <string name="reload">Reload</string>
    <string name="search_hint">Track, album, artist, playlist</string>
    <string name="error_occurred">Error Occurred!</string>
    <string name="artists">artists</string>
    <string name="playlists">playlists</string>
    <string name="albums">albums</string>
    <string name="tracks">tracks</string>
    <string name="no_content">No content</string>
</resources>